Fixed alignment issues in add edit and view candidate

--- a/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/addCandidateSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/addCandidateSuccess.css
@@ -187,6 +187,7 @@ table.data-table th {
     text-align:left;
     vertical-align:middle;
     white-space:nowrap;
+    width: 170px !important;
 }
 
 #textBoxesGroup {
