--- a/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/changeCandidateVacancyStatusSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/changeCandidateVacancyStatusSuccess.css
@@ -40,7 +40,7 @@ form#frmCandidateVacancyStatus .secondLabel {
 	cursor:default;
 	font-size:11px;
 	font-weight:bold !important;
-	width: 140px !important;
+	width: 160px !important;
 }
 
 div.messageBalloon_success{
